# xshelftransects

./: .gitignore  README.md  pyproject.toml  test.ipynb
examples/: california_example.ipynb  weddell_example.ipynb
src/xshelftransects/: __init__.py  geometry.py  isobath.py  sampling.py  transects.py
tests/: test_full_workflow.py
