[project]
name = "xshelftransects"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Meza",email = "64243783+anthony-meza@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray[complete]",
    "intake-geopandas[all] (>=0.4.0,<0.5.0)",
    "intake (>=2.0.8,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "intake-xarray[all] (>=2.0.0,<3.0.0)",
    "intake-esm (>=2025.12.12,<2026.0.0)",
    "cartopy",
    "contourpy",
]

[tool.poetry]
packages = [{include = "xshelftransects", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"