[project]
name = "xshelftransects"
version = "0.1.2"
description = ""
authors = [
    {name = "Anthony Meza",email = "64243783+anthony-meza@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xarray[complete]",
    "pyarrow",
    "intake-geopandas[all] (>=0.4.0)",
    "intake (>=2.0.8)",
    "requests (>=2.32.5)",
    "intake-xarray[all] (>=2.0.0)",
    "intake-esm (>=2025.12.12)",
    "cartopy",
    "contourpy",
]

[tool.poetry]
packages = [{include = "xshelftransects", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
